# eliza_starter

./: .cursorignore  .cursorrules  .dockerignore  .env  .env.example  .env.example.dockercompose  .env.template  .env.test  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .html  .npmrc  .prettierignore  .prettierrc.js  .railwayignore  0001-feat-Initialize-Alethea-AI-Plugin-Structure-and-Conf.patch  404.html  AGENTS.md  AUTOCODER_IMPLEMENTATION_COMPLETE.md  AUTOCODER_SCENARIOS_SUMMARY.md  AiDOS20iv1.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.adam  Dockerfile.docs  Dockerfile.pepe  Dockerfile.railway  Dockerfile.railway.optimized  Dockerfile.server  ELIZANET_FALLBACK_README.md  FIX_CACHE_MISS.md  GUIDE.md  (+176 more)
.devcontainer/: Dockerfile
.github/: pull_request_template.md
Output/: plot_results.py
_plugin-twilio-docs/: 24 🧩 Plugins  eliza.md  packages_plugin.md
agent/: .gitignore  Readme.md  agent_logs.txt  client-github-context.txt  context.json  context.txt  debug_esm.sh  mainCharacter.ts  package.json  run.sh  state.json  tsconfig.json
atlas_files/: atlas_system_prompt.js  atlas_system_prompt.txt  run_instructions.txt
backup-custom/: pmurt47.character.json
blog/: add-plugins.html  archive.html  atom.xml  authors.html  autodocs.html  autofun-intro.html  autofun-tokenomics.html  feed.json  macos-dev-setup-guide.html  mission.html  openai-plugin-envs.html  plugin-ordering-guide.html  reintroduction.html  rss.xml  tags.html  taming-info.html  v1-v2.html  wdygdtw-recap.html
characters/: ETHan.character.json  Nayari.character.json  Salvador_Dalí.character.json  Tesla Configuration  adam.character.json  advisor.json  aquarius.character.json  astraea.character.json  atlas.character.json  baby.json  babywen.character.json  bingo.character.json  bud.character.json  bully.character.json  c3po.character.json  cascadia.character.json  charlotte.character.json  chatterbox.character.json  chronis.character.json  cosmosHelper.character.json  courage.character.json  cryptodegen.character.json  cryptowizard.character.json  cwd.character.json  darssi.character.json  depricated_dfbot.character.json  dev.character.json  dfbot.character.json  dobby.character.json  eliza-bot.json  eliza-code-assistant.character.json  eliza.character.json  esther.character.json  eternalai.character.json  eucratos.character.json  ferraignez.json  fozzie.character.json  gaia.character.json  gaia2.character.json  gaia3.character.json  (+64 more)
client/: .env.example  README.md  index.html  next.config.ts  package.json  tsconfig.app.json  tsconfig.json  version.cmd  vite.config.ts
codebuild/: buildspec.yml
coin_list/: coin_list_part_1.json  coin_list_part_2.json
data/: eliza.db  plugin-twilio.db
demo/: pgvector.Dockerfile
docker/: README.md
docs/: .gitignore  AI_Agents_UI_Interface_Documentation.md  README.md  README_CN.md  README_DE.md  README_FR.md  README_IND.md  README_JA.md  README_TH.md  awesome-eliza.html  (+15 more)
scripts/bug_hunt/: main.py  package.json  pyproject.toml
scripts/bug_hunt/utils/: agent.py
(+2848 files in other folders)
