[tool.poetry]
name = "elizaos-bug-hunter"
version = "0.1.0"
description = "Bug hunting and code quality analysis tools for ElizaOS plugins"
authors = ["AIFlow_ML <mlstudio@aiflow.ml>"]
package-mode = false  # Disable package mode

[tool.poetry.dependencies]
python = "3.13.2"
rich = "13.9.4"
termcolor = "2.5.0"
typer = "0.9.4"
pydantic = "2.10.5"
aiofiles = "23.2.1"
asyncio = "3.4.3"
textual = "0.47.1"
nodeenv = "1.9.1"  # For Node.js environment management
esprima = "4.0.1"  # Python port of Esprima JavaScript parser
lizard = "1.17.13"  # Code complexity analyzer
radon = "6.0.1"  # Various code metrics
semgrep = "1.85.0"  # Pattern-based bug finder
jschema-to-python = "1.2.3"  # JSON Schema support
graphviz = "0.20.3"  # For call graphs visualization
phidata = "2.7.9"
openai = "^1.60.0"
deepseek = "1.0.0"
anthropic = "0.45.0"
markdown = "3.7"
markitdown = "0.0.1a3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "5.13.2"
mypy = "1.14.1"
pytest = "7.4.4"
pytest-asyncio = "0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
